<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" tools:context=".MainActivity">
    <TextView android:id="@+id/title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="16dp" android:layout_marginBottom="50dp" android:layout_marginTop="50dp" android:layout_marginEnd="16dp" android:text="@string/app_name" android:textAlignment="center" android:textStyle="bold" android:textSize="32sp"/>
    <LinearLayout android:id="@+id/calculatrice" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@id/title" android:layout_margin="15dp" android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/premier_champs">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/premierchamp" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:hint="@string/deuxieme_champs">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/deuxiemechamp" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_marginTop="25dp" android:layout_gravity="center">
            <Button
                android:id="@+id/connexion"
                android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/conn"
                 android:layout_margin="15sp"/>
            <Button android:id="@+id/cancel_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reset" style="?attr/materialButtonOutlinedStyle" android:layout_margin="15dp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>