<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" tools:context=".ResultActivity">
    <TextView android:id="@+id/title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="16dp" android:layout_marginBottom="50dp" android:layout_marginTop="50dp" android:layout_marginEnd="16dp" android:text="@string/app_name" android:textAlignment="center" android:textStyle="bold" android:textSize="32sp"/>
    <TextView
        android:id="@+id/subTitle"
        android:layout_below="@id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="5sp"
        android:layout_marginEnd="16dp"
        android:text="@string/titre"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="32sp"/>

    <LinearLayout
        android:id="@+id/UserSubTitle"
        android:layout_width="match_parent"
        android:layout_margin="15sp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/subTitle"
        android:textSize="20sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Username : "/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-"
            android:id="@+id/userResult"

            android:gravity="center"
            android:textAlignment="center"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/passResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/UserSubTitle"
        android:textSize="20sp"
        android:layout_margin="15sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Password : "/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-"
            android:id="@+id/passresult"

            android:gravity="center"
            android:textAlignment="center"
            />

    </LinearLayout>



    <Button
        android:id="@+id/retour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passResult"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15sp"
        android:layout_marginTop="15sp"
        android:layout_marginEnd="15sp"
        android:layout_marginBottom="15sp"
        android:onClick="returnMain"
        android:text="@string/back"

        />
</RelativeLayout>